Justes del backend para sincronizar con el frontend